services/routing-demo/demo-b/identity_domain_service_deploy_0.1.1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: identity-domain-service
    role: internal
    version: 0.1.1
  name: identity-domain-service-0.1.1
  namespace: multi-tenant-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-domain-service
      role: internal
      version: 0.1.1
  template:
    metadata:
      labels:
        app: identity-domain-service
        role: internal
        version: 0.1.1
    spec:
      containers:
      - image: wcschlosser/identity-domain-service:0.1.1
        name: identity-domain-service
